--- a/web/src/global.css
+++ b/web/src/global.css
@@ -12,8 +12,10 @@ html {
 }
 
 body {
+  height: 100vh;
   font-family: 'Nunito', sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-size: 1.6rem;
+  background: linear-gradient(167.96deg, #B8C0FF 0%, #42A1DC 100%);
 }
