--- a/web/src/global.css
+++ b/web/src/global.css
@@ -14,8 +14,30 @@ html {
 body {
   height: 100vh;
   font-family: 'Nunito', sans-serif;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   font-size: 1.6rem;
   background: linear-gradient(167.96deg, #B8C0FF 0%, #42A1DC 100%);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1,
+h2,
+p {
+  font-weight: 500;
+}
+
+.artifact-account {
+  background: linear-gradient(95.32deg, #a9def9 0%, #e4f2fa 100%);
+}
+
+.artifact-objective {
+  background: linear-gradient(95.32deg, #e4c1f9 0%, #eee2f4 100%);
+}
+
+.artifact-transaction {
+  background: linear-gradient(95.32deg, #aaf5c8 0%, #e5f9ed 100%);
+}
+
+.artifact-category {
+  background: linear-gradient(95.32deg, #f5ec97 0%, #f5f2da 100%);
 }
