--- a/web/src/components/Header/styles.css
+++ b/web/src/components/Header/styles.css
@@ -3,20 +3,40 @@
   height: 10rem;
   background-color: #39393A;
   box-shadow: 0 0 1rem rgba(14, 9, 9, 0.8);
+  padding: 0 1.5rem;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .header-image {
   width: 5.5rem;
-
-  position: absolute;
-  left: 0;
-  margin-left: 1rem;
 }
 
 .header-user-name {
   color: #FFF;
+}
+
+.header-menu {
+  background: none;
+  border: none;
+}
+
+.header-menu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header-menu-link {
+  text-decoration: none;
+  border-bottom: 1px solid #a3a3a3;
+  /* width: 90%; */
+}
+
+.header-menu-option {
+  font-size: 3rem;
+  margin: 2rem 0;
+  color: #39393A;
 }
