--- a/web/src/components/Button/styles.css
+++ b/web/src/components/Button/styles.css
@@ -2,10 +2,11 @@
   width: 100%;
   height: 5rem;
   border: 0;
+  outline: 0;
   cursor: pointer;
-  background: #505050;
   border-radius: 0.5rem;
   text-decoration: none;
+  margin: 1rem 0;
 
   display: flex;
   justify-content: center;
@@ -14,8 +15,20 @@
   transition: background-color 0.2s;
 }
 
-.button-container:hover {
+.button-color-create {
+  background: #505050;
+}
+
+.button-color-delete {
+  background: #FF8888;
+}
+
+.button-color-create:hover {
   background-color: #39393A;
+}
+
+.button-color-delete:hover {
+  background-color: #da6f6f;
 }
 
 .button-title {
