--- a/web/src/global.css
+++ b/web/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
 * {
   margin: 0;
@@ -13,7 +13,7 @@ html {
 
 body {
   min-height: 100vh;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   background: linear-gradient(167.96deg, #B8C0FF 0%, #42A1DC 100%);
   text-rendering: optimizeLegibility;
@@ -23,6 +23,6 @@ body {
 h1,
 h2,
 p {
-  font-weight: 500;
-  font-family: 'Nunito', sans-serif;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
 }
